# omix

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile
docs/source/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  usage.rst
omix/: __init__.py  cli.py  config.py  logging_utils.py
omix/metadata/: __init__.py  base.py  constants.py  enrichment.py  file_workflow.py  manager.py
omix/metadata/ena/: __init__.py  cache.py  enrichment_pipeline.py  fetcher.py  metadata.py  sample_parser.py  sra_fallback.py
omix/publications/: __init__.py  base.py  cache.py  exceptions.py  fetcher.py  pipeline.py
omix/publications/apis/: __init__.py  arxiv.py  base.py  basesearch.py  bioarxiv.py  core.py  crossref.py  datacite.py  doaj.py  europe_pmc.py  lens.py  mendeley.py  ncbi.py  plos.py  semantic_scholar.py  springer_nature.py  unpaywall.py  zenodo.py
omix/publications/extractors/: __init__.py  cleaning.py  llm.py  pdf.py  webpage.py
omix/validators/: primer_db.py  probebase_builder.py
scripts/: comprehensive_data_fix.py  enrich_with_publications.py  fix_data_quality.py
tests/: README.md  conftest.py
tests/artifacts/: final_result.json  final_test.json  results.json  test_16s.json
tests/integration/: test_ena_fetch.py  test_primers.py  test_publication_accessions.py
tests/manual/: demo_pipeline.py  publication_validator.py
tests/unit/: test_core.py  test_publication_pipeline.py
(+39 files in other folders)
